--- a/office-catalog-client/package.json
+++ b/office-catalog-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cics_nodejs_invoke",
+  "name": "office_catalog_client",
   "version": "0.1.0",
   "description": "Blah",
   "license": "Apache-2.0",
