--- a/office-catalog-client/package.json
+++ b/office-catalog-client/package.json
@@ -12,6 +12,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "ibm-cics-api": "^1.0.1"
