--- a/office-catalog-client/package.json
+++ b/office-catalog-client/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "axios": "^1.2.1",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "ibm-cics-api": "^1.0.1"
+    "express": "^4.16.4"
   }
 }
